Updated assets and scaling
Reduced asset file size to build in optimisations

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-     <title>Simpe Game</title>
+     <title>Chasing Acorns</title>
      <script src="libraries/p5.js" type="text/javascript"></script>
      <script src="libraries/p5.play.js" type="text/javascript"></script>
      <script src="sketch.js" type="text/javascript"></script>
