--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
      <title>Chasing Acorns</title>
      <script src="libraries/p5.js" type="text/javascript"></script>
      <script src="libraries/p5.play.js" type="text/javascript"></script>
+      <script src="libraries/p5.dom.js" type="text/javascript"></script>
      <script src="sketch.js" type="text/javascript"></script>
+     <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
    </head>
    <body>
    </body>
