--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
      <script src="sketch.js" type="text/javascript"></script>
      <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
    </head>
+   <style>
+  * {
+    font-size: 11pt;
+    font-family: Courier;
+  }
+  h2 {
+    font-size: 14pt;
+  }
+  #highscores {
+    margin: auto;
+    padding-right: 60px;
+  }
+   </style>
    <body>
+     <div id=canvas-container style="float:left;"></div>
+        <div id=highscores style="float:right;">
+          <h2>Highscores</h2>
+          <ol id =scorelist></ol>
+        </div>
+     <div id=content style="clear:both;"></div>
    </body>
 </html>
